# magma-parse-tool

./: .clang-format  CMakeLists.txt  README.md  mpt.hpp  mpt_memory.hpp  test.cpp  test.mmd
